--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">flightApp</string>
+    <string name="select_airline_hint">Select Airline</string>
     <string name="flight_number_hint">ex: A664</string>
     <string name="what_is_your_flight_number">What is your Flight Number?</string>
     <string name="let_s_find_out_how_to_get">Let’s find out how to get</string>
